# python-project-52

./: .coveragerc  .env  .env.example  .gitignore  Makefile  README.md  build.sh  coverage.xml  manage.py  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
.github/workflows/: build.yml  sonar.yaml
hexlet-code/: .env.example  README.md  build.sh  manage.py
hexlet-code/task_manager/: settings.py  urls.py
hexlet-code/task_manager/tasks/: app.py  filters.py  views.py
hexlet-code/task_manager/templates/: base.html  index.html
hexlet-code/task_manager/users/: forms.py  views.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
task_manager/: filters.py  forms.py  models.py  rollbar_setting.py  settings.py  urls.py  views.py  wsgi.py
task_manager/common/: labels.py
task_manager/labels/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: app.py  filters.py  forms.py  models.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_executor.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: create.html  index.html  label_list.html  (+1 more)
task_manager/users/: forms.py  urls.py  user_list.html  views.py
templates/: base.html  index.html
templates/labels/: create.html  delete.html  index.html  update.html
templates/statuses/: create.html  delete.html  index.html  update.html
templates/tasks/: create.html  index.html  show.html  update.html
templates/users/: create.html  delete.html  index.html  login.html  update.html  views.py
tests/: test_labels.py  test_statuses.py  test_tasks.py  test_tasks_filter.py  test_user.py
(+19 files in other folders)
