[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hexlet-code"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "gunicorn",
    "psycopg2-binary",
    "python-dotenv",
    "dj-database-url",
    "django-filter",
    "django-bootstrap5",
    "rollbar>=0.16.3",
]

[tool.setuptools]
packages = ["task_manager"]

[dependency-groups]
dev = ["pytest", "pytest-django", "ruff"]
